# sdl2-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
